Fix oversized audit logs for tree batch writes (#18345)